# ducktrace

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  main.py  package.json  pyproject.toml
ducktrace-rs/: Cargo.toml
ducktrace-rs/src/: app.rs  db.rs  main.rs  watcher.rs
ducktrace-rs/src/data/: format.rs  mod.rs  model.rs
ducktrace-rs/src/ui/: chart.rs  data.rs  explain.rs  help.rs  mask.rs  mod.rs  query.rs  tabs.rs
src/: __init__.py  ducktrace-mcp.js  explain-chart-mcp.js  formatting.py  generate.js  template.html  tui.py  views.py  watcher.py
