[project]
name = "ducktrace"
version = "0.1.0"
description = "Interactive charts with data lineage - trace any data point back to your SQL query"
requires-python = ">=3.11"
dependencies = [
    "plotext>=5.3.2",
    "rich>=14.3.1",
    "sqlparse>=0.5.0",
    "watchdog>=6.0.0",
]

[project.scripts]
ducktrace = "src.tui:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
